fixed overflow value

--- a/src/components/Mobile.scss
+++ b/src/components/Mobile.scss
@@ -12,7 +12,7 @@
   max-height: 900px;
   background: #f2f6ffff;
   gap: 128px;
-  overflow: visible;
+  overflow: hidden visible;
 }
 
 .mobile__image {
